# sotr23

./: .env  Makefile  cab.c  cab.h  main.c  run.sh  test_cab.c  webCamCapture  webCamCapture.c
include/: cab.h  imageViewer.h  landmarkDetector.h  objDetector.h  object.h  varsDisplayer.h  webCamCapture.h
projeto1/: README.md  main.c  test_cab.c
projeto1/include/: detectRedSquare.h  landmarkDetector.h  objDetector.h  point.h
projeto1/src/: cab.c  detectRedSquare.c  objDetector.c  varsDisplayer.c
projeto2/: CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf
projeto2/rtdatabase/: CMakeLists.txt  rtDatabase.c  rtdb.c  rtdb.h
projeto2/src/: fifo.c  main.c  protocol.c  rtDatabase.c  rtdb.c  uart.c
projeto2/src/include/: fifo.h  protocol.h  rtDatabase.h  rtdb.c  rtdb.h  uart.h
projeto2/test/: test_rt.c
src/: cab.c  detectRedSquare.c  imageHelper.c  imageViewer.c  landmarkDetector.c  objDetector.c  varsDisplayer.c  webCamCapture.c
